Version 2.02.173 - 
=================================
  Accept 'lvm -h' and 'lvm --help' as well as 'lvm help' for help.
  Suppress error message from accept() on clean lvmetad shutdown.
  Tidy clvmd client list processing and fix segfaults.
  Protect clvmd debug log messages with mutex and add client id.
  Fix shellcheck reported issues for script files.

Version 2.02.172 - 28th June 2017
=================================
  Add missing NULL to argv array when spliting cmdline arguments.
  Add display_percent helper function for printing percent values.
  lvconvert --repair handles failing raid legs (present but marked 'D'ead).
  Do not lvdisplay --maps unset settings of cache pool.
  Fix lvdisplay --maps for cache pool without policy settings.
  Support aborting of flushing cache LV.
  Reenable conversion of data and metadata thin-pool volumes to raid.
  Improve raid status reporting with lvs.
  No longer necessary to '--force' a repair for RAID1.
  Linear to RAID1 upconverts now use "recover" sync action, not "resync".
  Improve lvcreate --cachepool arg validation.
  Limit maximum size of thin-pool for specific chunk size.
  Print a warning about in-use PVs with no VG using them.
  Disable automatic clearing of PVs that look like in-use orphans.
  Cache format2 flag is now using segment name type field.
  Support storing status flags via segtype name field.
  Stop using '--yes' mode when fsadm runs without terminal.
  Extend validation of filesystems resized by fsadm.
  Enhance lvconvert automatic settings of possible (raid) LV types.
  Allow lvchange to change properties on a thin pool data sub LV.
  Fix lvcreate extent percentage calculation for mirrors.
  Don't reinstate still-missing devices when correcting inconsistent metadata.
  Properly handle subshell return codes in fsadm.
  Disallow cachepool creation with policy cleaner and mode writeback.

Version 2.02.171 - 3rd May 2017
===============================